# bazel-language-server

./: .gitignore  README.md  TODO.md
lsp/: .gitignore  bazel.py  main.py  pyproject.toml  requirements.txt
lsp/bazel/: bazel_file.py  bazel_query.py  file.py  query.py  workspace.py
lsp/bazel/test/: test_bazel_file.py  test_bazel_query.py  test_file.py  test_query.py
lsp/capabilities/: definition.py  goto_definition.py  references.py  rename.py  symbols.py
lsp/capabilities/test/: test_definition.py  test_references.py  test_rename.py
lsp/test/: test_bazel.py
lsp/utils/: config.py  directory.py  file.py  paths.py
lsp_rust/: Cargo.toml
lsp_rust/src/: bazel_file.rs  language_server.rs  main.rs  utils.rs
