[package]
name = "lsp_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
log = "0.4.17"
log4rs = "1.2.0"
rustpython-parser = "0.2.0"
simple-logging = "2.0.2"
tokio = { version = "1.28.1", features = ["full"] }
tower-lsp = "0.19.0"
